# nix-post-build-hook-queue

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  module.nix
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
nixos/: module.nix
nixos/tests/: basic.nix  test_host_key  test_host_key.pub  test_key  test_key.pub
post-build-hook/: Cargo.toml
post-build-hook-queue/: Cargo.toml
post-build-hook-queue/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
